# proyecto-1-ci5437

./: .gitignore  CMakeLists.txt  CMakeLists.txt.base  README.md  compile.py  main.c++  main.cpp  procecss_data.py  remove.py  run copy 2.py  run copy.py  run.py  setud.py
benchmarks copy/hanoi4-12/: hanoi_4p12d.d=005  hanoi_4p12d.d=010  hanoi_4p12d.d=015  hanoi_4p12d.d=2000  hanoi_4p12d.d=2000000
benchmarks copy/hanoi4-14/: hanoi_4p14d.d=005  hanoi_4p14d.d=010  hanoi_4p14d.d=015  hanoi_4p14d.d=2000  hanoi_4p14d.d=2000000
benchmarks copy/hanoi4-18/: hanoi_4p18d.d=005  hanoi_4p18d.d=010  hanoi_4p18d.d=015  hanoi_4p18d.d=2000  hanoi_4p18d.d=2000000
n-puzzle/: n-puzzle-generator.py
n-puzzle/15-puzzle/: 15-puzzle.c  bfs.c++
n-puzzle/24-puzzle/: 24-puzzle.c
psvn/: psvn2c
results/: 15-puzzle_3.csv  15-puzzle_900.csv  15-puzzle_900_m.csv  15-puzzle_t3_manhattan.csv  15-puzzle_t3_pdb.csv  24-puzzle_3.csv  24-puzzle_900.csv  24-puzzle_900_m.csv  24-puzzle_t3_manhattan.csv  24-puzzle_t3_pdb.csv  hanoi4-12_3.csv  hanoi4-12_900.csv  hanoi4-12_t3_pdb.csv  hanoi4-14_3.csv  hanoi4-14_900.csv  hanoi4-14_t3_pdb.csv  hanoi4-18_3.csv  hanoi4-18_900.csv  hanoi4-18_t3_pdb.csv  rubik3_3.csv  rubik3_900.csv  rubik3_t3_pdb.csv  topspin_12_4_3.csv  topspin_12_4_900.csv  topspin_12_4_t3_pdb.csv  topspin_14_4.csv  topspin_14_4_3.csv  topspin_14_4_900.csv  topspin_14_4_t3_pdb.csv  topspin_17_4_3.csv  topspin_17_4_900.csv  topspin_17_4_t3_pdb.csv
results/tex/: 15-puzzle_3_found.csv  15-puzzle_3_num_expanded.csv  15-puzzle_3_num_generated.csv  15-puzzle_900.csv  15-puzzle_900_m.csv  15-puzzle_t3_manhattan_found.csv  15-puzzle_t3_manhattan_num_generated.csv  24-puzzle_3_found.csv  24-puzzle_3_num_expanded.csv  24-puzzle_3_num_generated.csv  24-puzzle_900.csv  24-puzzle_900_m.csv  24-puzzle_t3_pdb_found.csv  24-puzzle_t3_pdb_num_expanded.csv  hanoi4-12_3_found.csv  hanoi4-12_3_num_expanded.csv  hanoi4-12_3_num_generated.csv  hanoi4-12_900.csv  hanoi4-12_t3_pdb_found.csv  hanoi4-12_t3_pdb_num_expanded.csv  hanoi4-12_t3_pdb_num_generated.csv  hanoi4-14_3_found.csv  hanoi4-14_3_num_expanded.csv  hanoi4-14_3_num_generated.csv  hanoi4-14_900.csv  hanoi4-14_900_o.csv  hanoi4-14_t3_pdb_found.csv  (+40 more)
(+89 files in other folders)
